language_course final

--- a/language_courses/spanish/spanish.html
+++ b/language_courses/spanish/spanish.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Course - Language Learning Center</title>
+    <title>Spanish Course - Language Learning Center</title>
     <link rel="stylesheet" href="../shared.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -12,16 +12,16 @@
         <!-- Header Section -->
         <header class="course-header">
             <div class="header-content">
-                <h1>English Language Course</h1>
-                <p class="subtitle">Master the global language of business and communication</p>
+                <h1>Spanish Language Course</h1>
+                <p class="subtitle">Master Spanish with our comprehensive language program</p>
                 <div class="course-badges">
-                    <span class="badge"><i class="fas fa-clock"></i> 12 Weeks</span>
+                    <span class="badge"><i class="fas fa-clock"></i> 16 Weeks</span>
                     <span class="badge"><i class="fas fa-signal"></i> All Levels</span>
                     <span class="badge"><i class="fas fa-users"></i> Small Groups</span>
                 </div>
             </div>
             <div class="header-image">
-                <img src="../pics/Statue of Liberty.jpg" alt="English Course">
+                <img src="../pics/spain.jpg" alt="Spanish Course">
             </div>
         </header>
 
@@ -32,7 +32,7 @@
                 <div class="overview-card">
                     <i class="fas fa-graduation-cap"></i>
                     <h3>Course Structure</h3>
-                    <p>12-week comprehensive program</p>
+                    <p>16-week comprehensive program</p>
                     <p>3 sessions per week</p>
                     <p>2-hour interactive classes</p>
                     <p>Weekly progress assessments</p>
@@ -48,7 +48,7 @@
                 <div class="overview-card">
                     <i class="fas fa-certificate"></i>
                     <h3>Certification</h3>
-                    <p>CEFR aligned certification</p>
+                    <p>DELE preparation</p>
                     <p>Progress tracking</p>
                     <p>Final assessment</p>
                     <p>International recognition</p>
@@ -97,7 +97,7 @@
                 <div class="feature">
                     <i class="fas fa-chalkboard-teacher"></i>
                     <h3>Expert Instructors</h3>
-                    <p>Learn from certified native English speakers with years of teaching experience.</p>
+                    <p>Learn from certified native Spanish speakers with years of teaching experience.</p>
                 </div>
                 <div class="feature">
                     <i class="fas fa-laptop"></i>
@@ -123,28 +123,28 @@
             <div class="instructors-grid">
                 <div class="instructor-card">
                     <div class="instructor-image">
-                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=John" alt="John Smith">
+                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Maria" alt="Maria Rodriguez">
                     </div>
                     <div class="instructor-info">
-                        <h3>John Smith</h3>
-                        <p class="instructor-title">Senior English Instructor</p>
-                        <p class="instructor-bio">10+ years of teaching experience, CELTA certified, specializes in business English and academic writing.</p>
+                        <h3>Maria Rodriguez</h3>
+                        <p class="instructor-title">Senior Spanish Instructor</p>
+                        <p class="instructor-bio">10+ years of teaching experience, DELE certified, specializes in business Spanish and academic writing.</p>
                         <div class="instructor-expertise">
-                            <span>Business English</span>
+                            <span>Business Spanish</span>
                             <span>Academic Writing</span>
-                            <span>IELTS Preparation</span>
+                            <span>DELE Preparation</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="instructor-card">
                     <div class="instructor-image">
-                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Sarah" alt="Sarah Williams">
+                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Carlos" alt="Carlos Martinez">
                     </div>
                     <div class="instructor-info">
-                        <h3>Sarah Williams</h3>
+                        <h3>Carlos Martinez</h3>
                         <p class="instructor-title">Conversation Specialist</p>
-                        <p class="instructor-bio">8 years of experience in teaching conversational English, expert in pronunciation and public speaking.</p>
+                        <p class="instructor-bio">8 years of experience in teaching conversational Spanish, expert in pronunciation and public speaking.</p>
                         <div class="instructor-expertise">
                             <span>Conversation</span>
                             <span>Pronunciation</span>
@@ -155,16 +155,16 @@
 
                 <div class="instructor-card">
                     <div class="instructor-image">
-                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Michael" alt="Michael Brown">
+                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Ana" alt="Ana Garcia">
                     </div>
                     <div class="instructor-info">
-                        <h3>Michael Brown</h3>
+                        <h3>Ana Garcia</h3>
                         <p class="instructor-title">Grammar Expert</p>
-                        <p class="instructor-bio">12 years of teaching experience, specializes in grammar and exam preparation, TOEFL certified.</p>
+                        <p class="instructor-bio">12 years of teaching experience, specializes in grammar and exam preparation, DELE certified.</p>
                         <div class="instructor-expertise">
                             <span>Grammar</span>
                             <span>Exam Prep</span>
-                            <span>TOEFL</span>
+                            <span>DELE</span>
                         </div>
                     </div>
                 </div>
@@ -178,19 +178,19 @@
                 <div class="comments-track">
                     <div class="comment-card">
                         <div class="student-info">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Emma" alt="Emma">
+                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Juan" alt="Juan">
                             <div>
-                                <h4>Emma Thompson</h4>
+                                <h4>Juan Perez</h4>
                                 <p>Intermediate Level</p>
                             </div>
                         </div>
-                        <p class="comment-text">"The course structure is excellent. I've improved my English significantly in just a few weeks."</p>
+                        <p class="comment-text">"The course structure is excellent. I've improved my Spanish significantly in just a few weeks."</p>
                     </div>
                     <div class="comment-card">
                         <div class="student-info">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=David" alt="David">
+                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Sofia" alt="Sofia">
                             <div>
-                                <h4>David Chen</h4>
+                                <h4>Sofia Lopez</h4>
                                 <p>Advanced Level</p>
                             </div>
                         </div>
@@ -198,9 +198,9 @@
                     </div>
                     <div class="comment-card">
                         <div class="student-info">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Maria" alt="Maria">
+                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Diego" alt="Diego">
                             <div>
-                                <h4>Maria Garcia</h4>
+                                <h4>Diego Ramirez</h4>
                                 <p>Beginner Level</p>
                             </div>
                         </div>
@@ -247,9 +247,9 @@
                 <div class="enrollment-details">
                     <div class="price">
                         <span class="amount">$499</span>
-                        <span class="period">/ 12 weeks</span>
+                        <span class="period">/ 16 weeks</span>
                     </div>
-                    <p>Start your English learning journey today!</p>
+                    <p>Start your Spanish learning journey today!</p>
                 </div>
                 <form class="enrollment-form">
                     <div class="form-group">
