calm before the storm

--- a/programming_courses/programming_pages/php.html
+++ b/programming_courses/programming_pages/php.html
@@ -52,7 +52,7 @@
             </div>
             <h1>skills you will gain</h1>
             <div class="skill_grid">
-            <div class="skill_item"><p>C++</p></div>
+            <div class="skill_item"><p>PHP</p></div>
             <div class="skill_item"><p>Object-Oriented Programming (OOP)</p></div>
             <div class="skill_item"><p>Computer Programming</p></div>
             <div class="skill_item"><p>Computer Science</p></div>
