--- a/language_courses/english/english.html
+++ b/language_courses/english/english.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="header-image">
-                <img src="../pics/Statue of Liberty.jpg" alt="English Course">
+                <img src="/language_courses/pics/Statue of Liberty.jpg" alt="English Course">
             </div>
         </header>
 
