added navigation bar to every page

--- a/language_courses/courses_page.html
+++ b/language_courses/courses_page.html
@@ -11,25 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
+     <!-- Navigation Bar -->
     <nav class="navbar">
-        <div class="nav-container">
-            <a href="../index.html" class="logo">
-                <i class="fas fa-graduation-cap"></i>
-                LearnHub
-            </a>
-            <div class="nav-links">
-                <a href="../index.html">Home</a>
-                <a href="courses_page.html">Language Courses</a>
-                <a href="../programming_courses/index.html">Programming Courses</a>
-                <a href="../soft skills/index.html">Soft Skills</a>
-                <a href="../contact.html">Contact Us</a>
-            </div>
-            <div class="mobile-menu">
-                <i class="fas fa-bars"></i>
-            </div>
-        </div>
+
     </nav>
+
     <!-- Main container for all content -->
     <div class="container">
         <!-- Main title section -->
@@ -390,5 +376,6 @@
             }
         }
     </style>
+    <script src="/main page/main.js"></script>
 </body>
 </html>
