--- a/main page/index.html
+++ b/main page/index.html
@@ -10,22 +10,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <div class="nav-container">
-            <a href="index.html" class="logo">
-                <i class="fas fa-graduation-cap"></i>
-                LearnHub
-            </a>
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="language_courses/courses_page.html">Language Courses</a>
-                <a href="programming_courses/index.html">Programming Courses</a>
-                <a href="soft_skills/index.html">Soft Skills</a>
-                <a href="contact.html">Contact Us</a>
-            </div>
-            <div class="mobile-menu">
-                <i class="fas fa-bars"></i>
-            </div>
-        </div>
+
     </nav>
 
     <div class="container">
@@ -293,5 +278,6 @@
             });
         });
     </script>
+    <script src="/main page/main.js"></script>
 </body>
 </html>
