--- a/main page/navbar.html
+++ b/main page/navbar.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <style>
 .navbar {
-    background: white;
+    background: rgb(255, 255, 255);
     padding: 1rem 0;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     position: sticky;
@@ -97,16 +97,16 @@
 </style>
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">
+            <a href="/main page/index.html" class="logo">
                 <i class="fas fa-graduation-cap"></i>
                 LearnHub
             </a>
             <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="language_courses/courses_page.html">Language Courses</a>
-                <a href="programming_courses/index.html">Programming Courses</a>
-                <a href="soft_skills/index.html">Soft Skills</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="/main page/index.html">Home</a>
+                <a href="/language_courses/courses_page.html">Language Courses</a>
+                <a href="/programming_courses/index.html">Programming Courses</a>
+                <a href="/soft skills/index.html">Soft Skills</a>
+                <a href="/contact_us/contact.html">Contact Us</a>
             </div>
             <div class="mobile-menu">
                 <i class="fas fa-bars"></i>
