--- a/soft skills/course1/index.html
+++ b/soft skills/course1/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="../course1/main.css">
 </head>
 <body>
+        <!-- Navigation Bar -->
+    <nav class="navbar">
+
+    </nav>
     <div class="sec1">
         <div class="sec1-left">
             <h1>Essential Skills for Your Career Development</h1>
@@ -136,5 +140,6 @@
 
     </div>
     <script src="../course1/main.js"></script>
+    <script src="/main page/main.js"></script>
 </body>
 </html>
