--- a/soft skills/index.html
+++ b/soft skills/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+        <!-- Navigation Bar -->
+    <nav class="navbar">
+
+    </nav>
     <h1>marketing & soft skills</h1>
     <div class="container">
         <a href="course1/index.html">
@@ -424,5 +428,6 @@
             }
         }
     </style>
+<script src="/main page/main.js"></script>
 </body>
 </html>
