--- a/language_courses/spanish/spanish.html
+++ b/language_courses/spanish/spanish.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+        <!-- Navigation Bar -->
+    <nav class="navbar">
+
+    </nav>
+
     <div class="container">
         <!-- Header Section -->
         <header class="course-header">
@@ -276,5 +281,6 @@
         </section>
     </div>
     <script src="../shared.js"></script>
+    <script src="/main page/main.js"></script>
 </body>
 </html> 
