--- a/programming_courses/programming_pages/python.html
+++ b/programming_courses/programming_pages/python.html
@@ -8,6 +8,11 @@
     </head>
 
     <body>
+            <!-- Navigation Bar -->
+    <nav class="navbar">
+
+    </nav>
+
         <div class="first_container"><!--first container-->
             <div class="text_side">
                 <div>
@@ -86,5 +91,6 @@
             </div>
         </div>
         <script src="scripts.js"></script>
+        <script src="/main page/main.js"></script>
     </body>
 </html>
