--- a/soft skills/course2/index.html
+++ b/soft skills/course2/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+        <!-- Navigation Bar -->
+    <nav class="navbar">
+
+    </nav>
     <div class="sec1">
         <div class="sec1-left">
             <h1>Business Fundamentals: Effective Communication</h1>
@@ -128,5 +132,6 @@
     </div>
 
     </div>
+    <script src="/main page/main.js"></script>
 </body>
 </html>
