fixed pics not appearing

--- a/main page/index.html
+++ b/main page/index.html
@@ -24,7 +24,7 @@
             <!-- Language Courses Card -->
             <div class="course-card">
                 <div class="card-image">
-                    <img src="language_courses/pics/Statue of Liberty.jpg" alt="Language Courses">
+                    <img src="/language_courses/pics/Statue of Liberty.jpg" alt="Language Courses">
                 </div>
                 <div class="card-content">
                     <div class="card-icon">
@@ -37,14 +37,14 @@
                         <li><i class="fas fa-check"></i> Interactive learning methods</li>
                         <li><i class="fas fa-check"></i> Cultural immersion</li>
                     </ul>
-                    <a href="language_courses/courses_page.html" class="cta-button">Explore Languages</a>
+                    <a href="/language_courses/courses_page.html" class="cta-button">Explore Languages</a>
                 </div>
             </div>
 
             <!-- Programming Courses Card -->
             <div class="course-card">
                 <div class="card-image">
-                    <img src="programming_courses/items/programming.jpg" alt="Programming Courses">
+                    <img src="/programming_courses/items/c++_course.png" alt="Programming Courses">
                 </div>
                 <div class="card-content">
                     <div class="card-icon">
@@ -57,14 +57,14 @@
                         <li><i class="fas fa-check"></i> Mobile App Development</li>
                         <li><i class="fas fa-check"></i> Data Science</li>
                     </ul>
-                    <a href="programming_courses/index.html" class="cta-button">Start Coding</a>
+                    <a href="/programming_courses/index.html" class="cta-button">Start Coding</a>
                 </div>
             </div>
 
             <!-- Soft Skills Card -->
             <div class="course-card">
                 <div class="card-image">
-                    <img src="language_courses/pics/soft-skills.jpg" alt="Soft Skills">
+                    <img src="https://ugc.futurelearn.com/uploads/images/f6/d7/thumbnail_f6d73978-418f-400b-8acb-e8f2a18aaa26.jpg" alt="Soft Skills">
                 </div>
                 <div class="card-content">
                     <div class="card-icon">
@@ -77,7 +77,7 @@
                         <li><i class="fas fa-check"></i> Leadership Development</li>
                         <li><i class="fas fa-check"></i> Team Collaboration</li>
                     </ul>
-                    <a href="#" class="cta-button">Develop Skills</a>
+                    <a href="/soft skills/index.html" class="cta-button">Develop Skills</a>
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@
             <div class="featured-grid">
                 <div class="featured-card">
                     <div class="featured-image">
-                        <img src="language_courses/pics/japan.jpg" alt="Japanese Course">
+                        <img src="/language_courses/pics/japan.jpg" alt="Japanese Course">
                     </div>
                     <div class="featured-content">
                         <span class="course-tag">Language</span>
@@ -123,74 +123,22 @@
                 </div>
                 <div class="featured-card">
                     <div class="featured-image">
-                        <img src="programming_courses/items/web-dev.jpg" alt="Web Development">
+                        <img src="/programming_courses/items/java_script_course.jpg" alt="Web Development">
                     </div>
                     <div class="featured-content">
                         <span class="course-tag">Programming</span>
-                        <h3>Full Stack Web Development</h3>
+                        <h3>javascript full course</h3>
                         <p>Master modern web development technologies</p>
                     </div>
                 </div>
                 <div class="featured-card">
                     <div class="featured-image">
-                        <img src="language_courses/pics/leadership.jpg" alt="Leadership">
+                        <img src="https://ugc.futurelearn.com/uploads/images/f6/d7/thumbnail_f6d73978-418f-400b-8acb-e8f2a18aaa26.jpg" alt="Leadership">
                     </div>
                     <div class="featured-content">
                         <span class="course-tag">Soft Skills</span>
                         <h3>Leadership Mastery</h3>
                         <p>Develop essential leadership skills for success</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Testimonials Section -->
-        <div class="testimonials-section">
-            <div class="section-header">
-                <h2>Student Success Stories</h2>
-                <p>What our students say about their learning journey</p>
-            </div>
-            <div class="testimonials-grid">
-                <div class="testimonial-card">
-                    <div class="testimonial-content">
-                        "The language courses are incredibly well-structured. I went from zero to conversational Spanish in just 3 months!"
-                    </div>
-                    <div class="testimonial-author">
-                        <div class="author-image">
-                            <img src="language_courses/pics/student1.jpg" alt="Sarah Johnson">
-                        </div>
-                        <div class="author-info">
-                            <h4>Sarah Johnson</h4>
-                            <p>Spanish Course Graduate</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-card">
-                    <div class="testimonial-content">
-                        "The programming courses gave me the skills I needed to land my dream job as a web developer. Highly recommended!"
-                    </div>
-                    <div class="testimonial-author">
-                        <div class="author-image">
-                            <img src="programming_courses/items/student2.jpg" alt="Michael Chen">
-                        </div>
-                        <div class="author-info">
-                            <h4>Michael Chen</h4>
-                            <p>Web Development Graduate</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-card">
-                    <div class="testimonial-content">
-                        "The soft skills training transformed my career. I'm now leading a team of 20 people with confidence."
-                    </div>
-                    <div class="testimonial-author">
-                        <div class="author-image">
-                            <img src="language_courses/pics/student3.jpg" alt="Emma Rodriguez">
-                        </div>
-                        <div class="author-info">
-                            <h4>Emma Rodriguez</h4>
-                            <p>Leadership Course Graduate</p>
-                        </div>
                     </div>
                 </div>
             </div>
